--- a/app/src/main/res/layout/activity_edit_food_detail.xml
+++ b/app/src/main/res/layout/activity_edit_food_detail.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.professorlee.foodnotes.FoodDetail">
-
+    android:orientation="vertical"
+    tools:context="com.example.professorlee.foodnotes.Edit_FoodDetail">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,7 +33,7 @@
             android:layout_height="0dp"
             android:layout_weight="2"
             android:orientation="vertical">
-            <TextView
+            <EditText
                 android:id="@+id/shopname"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -48,7 +49,7 @@
                 android:layout_height="1dp"
                 android:background="#e2caca"/>
 
-            <TextView
+            <Button
                 android:id="@+id/date"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -57,14 +58,15 @@
                 android:layout_marginLeft="16dp"
                 android:textSize="@dimen/food_detail_text"
                 tools:text="123"
-                android:textColor="@android:color/black"/>
+                android:textColor="@android:color/black"
+                android:background="@null"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#e2caca"/>
 
-            <TextView
+            <Button
                 android:id="@+id/type"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -73,6 +75,7 @@
                 android:layout_marginLeft="16dp"
                 android:textSize="@dimen/food_detail_text"
                 tools:text="123"
+                android:background="@null"
                 android:textColor="@android:color/black"/>
 
             <View
@@ -80,14 +83,13 @@
                 android:layout_height="1dp"
                 android:background="#e2caca"/>
 
-            <Button
+            <EditText
                 android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:padding="5dp"
                 android:onClick="btnToMap"
-                android:drawableRight="@drawable/ic_keyboard_arrow_right_24dp"
                 android:textSize="@dimen/food_detail_text"
                 tools:text="123"
                 android:layout_marginLeft="16dp"
