--- a/app/src/main/res/layout/activity_search_food.xml
+++ b/app/src/main/res/layout/activity_search_food.xml
@@ -5,7 +5,7 @@
     android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7a9dde"
+    android:background="@color/listcolor"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.example.professorlee.foodnotes.Search_Food">
