--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -3,14 +3,20 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="7dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="3dp"
+        card_view:cardCornerRadius="20dp"
+
+        card_view:cardElevation="20dp"
+        android:layout_marginBottom="0.1dp"
        >
 
         <LinearLayout
@@ -52,9 +58,5 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#312f2f"
-        android:layout_marginTop="10dp"/>
+
 </LinearLayout>
