--- a/app/src/main/res/layout/table_item_search_food.xml
+++ b/app/src/main/res/layout/table_item_search_food.xml
@@ -4,14 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="7dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="3dp"
+        card_view:cardCornerRadius="20dp"
+        card_view:cardBackgroundColor="@color/cardview"
+        card_view:cardElevation="20dp"
+        android:layout_marginBottom="0.1dp"
         >
 
         <LinearLayout
@@ -49,9 +55,5 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#312f2f"
-        android:layout_marginTop="10dp"/>
+
 </LinearLayout>
