--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#ff4081</color>
     <color name="titlecolor">#f7f4f3</color>
+    <color name="navigationBarColor">#1976D2</color>
+    <color name="listcolor">#b3e5fc</color>
+    <color name="cardview">#023e79</color>
 </resources>
