--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/listcolor"
-    tools:context="com.example.professorlee.foodnotes.FoodList">
+    tools:context="com.lu.luandroid.foodnotes.FoodList">
 
 
         <LinearLayout
