--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.professorlee.foodnotes.MainActivity">
+    tools:context="com.lu.luandroid.foodnotes.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
