--- a/app/src/main/res/layout/activity_search_food.xml
+++ b/app/src/main/res/layout/activity_search_food.xml
@@ -8,7 +8,7 @@
     android:background="@color/listcolor"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.professorlee.foodnotes.Search_Food">
+    tools:context="com.lu.luandroid.foodnotes.Search_Food">
 
 
     <LinearLayout
